# FEUP-DA-2324-PROJ1

./: App.cpp  App.h  CMakeCache.txt  CMakeLists.txt  Graph.h  Makefile  Management.cpp  Management.h  Project1_DA  cmake_install.cmake  main.cpp
T1/: App.cpp  App.h
T2/: BSM.cpp  BSM.h
T3/: RSF.cpp  RSF.h
